new_ui: added cards view per days, refactored mappers and domain models

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">WeatherForecastApp</string>
     <string name="celsius">%1$d℃</string>
+    <string name="week">This Week</string>
 </resources>
