new_ui: added some string values, changed item layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">WeatherForecastApp</string>
     <string name="celsius">%1$d℃</string>
     <string name="week">This Week</string>
+    <string name="view">View ></string>
 </resources>
